--- a/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -32,27 +32,18 @@
                     <li class="fa fa-ellipsis-v menu-separator"></li>
                     <li>
                         <ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
-                            <a class="Animated05 CursPointer Marbottom"><i class="fa fa-cog"></i> Setting</a>
+                            <a class="Animated05 CursPointer Marbottom"><i class="fa fa-cog"></i> Settings</a>
                             <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
                                 <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
                             </ul>
                         </ui:fragment>
                         <ui:fragment rendered="#{! webutil.hasAccess('ADVISOR')}">
-                            <a class="Animated05 CursPointer"><i class="fa fa-cog"></i> Setting</a>
+                            <a class="Animated05 CursPointer"><i class="fa fa-cog"></i> Settings</a>
                             <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
                                 <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
                             </ul>
                         </ui:fragment>
                     </li>
-
-                    <ui:fragment rendered="#{! webutil.hasAccess('ADVISOR')}">
-                    <li class="fa fa-ellipsis-v menu-separator"></li>
-                    <li style="margin-bottom: 20px;">
-                            <a class="Animated05 CursPointer" href="http://www.teamviewer.com/link/?url=505374&amp;id=35279493">
-                                <i class="fa fa-question-circle"></i> Help Desk<i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i>
-                            </a>
-                    </li>
-                    </ui:fragment>
 
                 </ul>
             </ui:fragment>
