--- a/tcm/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -15,7 +15,7 @@
 
             <p:submenu label="Account" icon="fa fa-file-text-o">
                 <p:menuitem value="New" icon="fa fa-plus-square"
-                            actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml')}"/>
+                            actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}"/>
             </p:submenu>
 
         </ps:menu>
