--- a/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -20,7 +20,10 @@
 
         <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
             <div class="layout-portlets-box TexAlCenter" style="border-radius:0;">
-                <script type="text/javascript" src="https://seal.thawte.com/getthawteseal?host_name=www.buildingbenjamins.com&amp;size=S&amp;lang=en"></script>
+                <div class="ShowOnDesktopTablet">
+                    <script type="text/javascript"
+                            src="https://seal.thawte.com/getthawteseal?host_name=www.buildingbenjamins.com&amp;size=S&amp;lang=en"></script>
+                </div>
             </div>
             Powered by Invessence<sup class="Fs9">SM</sup><br/>
             #{webutil.uiprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.
@@ -37,9 +40,6 @@
         </f:facet>
     </p:ajaxStatus>
 
-    <!--
-            <script type="text/javascript" src="https://integratedchat.teamviewer.com/widget"></script>
-    -->
 
     <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
     <h:outputStylesheet name="css/custom.css" library="spark-layout"/>
