--- a/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -3,23 +3,15 @@
         xmlns="http://www.w3.org/1999/xhtml"
         xmlns:f="http://java.sun.com/jsf/core"
         xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:ui="http://java.sun.com/jsf/facelets">
+        xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://java.sun.com/jsf/html">
 
 
     <div id="layout-topbar" class="ShadowGray">
         <div id="layout-topbar-indent">
-            <ui:fragment rendered="#{! webutil.isUserLoggedIn()}">
-                <a href="#{uiLayout.defaultHome}">
-                    <h:graphicImage name="#{uiLayout.logo}"
-                                    styleClass="Fleft" library="invessence" id="logo" class="Fleft"/>
-                </a>
-            </ui:fragment>
-            <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
                <a href="#{uiLayout.defaultHome}">
                    <h:graphicImage name="#{uiLayout.logo}"
                                    styleClass="Fleft" library="invessence" id="logo2" class="Fleft"/>
                </a>
-            </ui:fragment>
 
             <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
                 <a href="#" id="mobile-menu-button" class="BordRad3 white ShowOnMobile"><i class="fa fa-bars"></i> Menu</a>
@@ -44,6 +36,26 @@
                             </ul>
                         </ui:fragment>
                     </li>
+                    <li class="fa fa-ellipsis-v menu-separator"></li>
+                    <li>
+                        <p:outputText value="#{webutil.uiprofile.supportphone}"/>
+                        <br/>
+                        <a href="mailto:#{webutil.uiprofile.supportemail}">
+                            <p:outputText value="#{webutil.uiprofile.supportemail}"/>
+                        </a>
+                    </li>
+
+                </ul>
+            </ui:fragment>
+            <ui:fragment rendered="#{!webutil.isUserLoggedIn()}">
+                <ul id="layout-topbar-menu">
+                <li>
+                    <p:outputText value="#{webutil.uiprofile.supportphone}"/>
+                    <br/>
+                    <a href="mailto:#{webutil.uiprofile.supportemail}">
+                        <p:outputText value="#{webutil.uiprofile.supportemail}"/>
+                    </a>
+                </li>
 
                 </ul>
             </ui:fragment>
