--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -122,25 +122,27 @@ img.riskImage:hover {
 /**Button save and cancel**/
 
 @media (min-width: 320px) and (max-width: 450px){
-	.CommonBtnWidthSave {
-	float: none!important;
-	}
-	
-	.CommonBtnWidthCancel {
-	float: none!important;
-	}
-	
-	.CommonBtnWidthCancel > span, .CommonBtnWidthSave > span{
-	font-size: 12px!important;
-	}
-	
-	.BenBttonBlock {
-	width: 108%!important;
-	}
+    .CommonBtnWidthSave {
+        float: none!important;
+    }
+
+    .CommonBtnWidthCancel {
+        float: none!important;
+    }
+
+    .CommonBtnWidthCancel > span, .CommonBtnWidthSave > span{
+        font-size: 12px!important;
+    }
+
+    .BenBttonBlock {
+        width: 108%!important;
+    }
 }
 /*Prakash - Advisor Page*/
+
+
 .CommonBtnWidthCancel,.CommonBtnWidthSave {
-	width: 100px!important;
+    width: 100px!important;
 }
 
 .AdvUserName, .AdvVisitorStat {
@@ -204,9 +206,9 @@ img.riskImage:hover {
     .MiddleInitialWidth {
         width: 12%!important;
     }
-    
+
     .MiddleInitialWidthB {
-    width: 15%!important;
+        width: 15%!important;
     }
 }
 
@@ -215,16 +217,16 @@ img.riskImage:hover {
     .ui-panel > .ui-panel-content, .ui-panel {
         padding: 5px!important;
     }
-		
-	.ui-selectonemenu label.ui-selectonemenu-label {
-	    color: #778D9B!important;
-    padding: 7px 1px!important;
-	}
-	
+
+    .ui-selectonemenu label.ui-selectonemenu-label {
+        color: #778D9B!important;
+        padding: 7px 1px!important;
+    }
+
     .MiddleInitialWidth, .MiddleInitialWidthB {
         width: 100%!important;
-         border-right: 1px solid #D9E19B!important;
-         border-radius: 3px!important;
+        border-right: 1px solid #D9E19B!important;
+        border-radius: 3px!important;
     }
 }
 
@@ -241,9 +243,9 @@ img.riskImage:hover {
 }
 
 @media (min-width:735px) {
-	.portfolioCreationDD {
-	width: 180px!important;
-	}
+    .portfolioCreationDD {
+        width: 180px!important;
+    }
 }
 
 @media (max-width: 355px) {
@@ -282,33 +284,33 @@ img.riskImage:hover {
 
 
     .BeneficiaryBlockPadding .ui-panel-content {
-padding: 5px!important;
+        padding: 5px!important;
     }
 
     .FsRes14 {
-	font-size: 14px!important;
-	}
-	
-	.FsRes13 {
-	font-size: 13px!important;
-	}
-	
-	.BenBttonBlock {
-	width: 105%!important;
-	}	
-	.BeneficiaryEditPanel {
-	width: 100%!important;
-	}
-	
-	.BeneficiaryEditPanel > .ContainerIndent {
-	/*padding-right: 25px!important;*/
-	}
-	
-	.fundingRecurring > input {
-	    width: 100%!important;
-    padding: 7px 0px!important;
-	}
-	
+        font-size: 14px!important;
+    }
+
+    .FsRes13 {
+        font-size: 13px!important;
+    }
+
+    .BenBttonBlock {
+        width: 105%!important;
+    }
+    .BeneficiaryEditPanel {
+        width: 100%!important;
+    }
+
+    .BeneficiaryEditPanel > .ContainerIndent {
+        /*padding-right: 25px!important;*/
+    }
+
+    .fundingRecurring > input {
+        width: 100%!important;
+        padding: 7px 0px!important;
+    }
+
     .CustomWidthFA, .CustomWidthFA3 {
         width: 100% !important;
         margin: 5px 0;
@@ -332,9 +334,9 @@ padding: 5px!important;
         float: none!important;
         /* padding: 10px 1px!important; */
     }
-    
+
     .CustomWidthFA2, .MiddleInitialWidth, .MiddleInitialWidthB, .InputMergeRight, .InputMergeLeft {
-   /*  padding: 10px 1px!important; */
+        /*  padding: 10px 1px!important; */
     }
 
     .Margin-FAAddress {
@@ -492,9 +494,9 @@ padding: 5px!important;
 }
 
 @media (max-width: 1000px) and (min-width: 320px) {
-	.RightBlockAcctType, .LeftBlockAcctType {
-	width: 100%!important;
-	}
+    .RightBlockAcctType, .LeftBlockAcctType {
+        width: 100%!important;
+    }
 
     .BeneficiaryEditPanel {
         width: 100%!important;
@@ -503,26 +505,26 @@ padding: 5px!important;
 /**/
 
 @media (max-width: 480px) and (min-width: 320px) {
-	.margin-top-signup {
-	margin-top: 30px;
-	}
+    .margin-top-signup {
+        margin-top: 30px;
+    }
 }
 
 @media (min-width: 736px) {
-	.fundingRecurring > input {
-	 padding: 7px 10px!important;
-	}
-	
-	.AddressFieldOnly {
-	width: 97%!important;
-}
+    .fundingRecurring > input {
+        padding: 7px 10px!important;
+    }
+
+    .AddressFieldOnly {
+        width: 97%!important;
+    }
 }
 
 /*Projection Salb*/
 .ProjectionSlabHeight {
-height: 50px;
-background: #f2f2f2;
-text-align: left;	
+    height: 50px;
+    background: #f2f2f2;
+    text-align: left;
 }
 .triangleShape {
     height: 0px;
@@ -534,7 +536,7 @@ text-align: left;
 }
 
 .VerticalTriangleTop {
-	height: 0px;
+    height: 0px;
     width: 0px;
     background: transparent;
     border-right: 7px solid transparent;
@@ -544,7 +546,7 @@ text-align: left;
 }
 
 .VerticalTriangleBottom {
-	height: 0px;
+    height: 0px;
     width: 0px;
     background: transparent;
     border-right: 7px solid transparent;
@@ -554,21 +556,21 @@ text-align: left;
 }
 
 .BoxShadow {
-	box-shadow: 2px 2px 4px #d8d5d5;
+    box-shadow: 2px 2px 4px #d8d5d5;
 }
 
 .PSlabLabel {
-	    line-height: 50px;
+    line-height: 50px;
     font-size: 17px;
 }
 
 .PSlabLink {
-	margin:0px 0px!important;
+    margin:0px 0px!important;
 }
 
 .PojectionSlabPanel {
-	border: 0!important;
-	background: transparent!important;
+    border: 0!important;
+    background: transparent!important;
 }
 
 .Container30-tcmUI {
@@ -577,98 +579,132 @@ text-align: left;
 }
 
 .Container70-tcmUI {
-	width: 70%;
-	float: left;
+    width: 70%;
+    float: left;
 }
 
 .PSlabPadding {
-padding: 110px 0;
+    padding: 110px 0;
 }
 
 .ContainerDropDownSizing {
-	width: 100%;
+    width: 100%;
 }
 
 .ContainerPSlab-tcmUI {
-	width: 50%;
+    width: 50%;
 }
 
 .EnableDrodownProjection, .EmptyBox20Res {
-	Display: none;
+    Display: none;
 }
 .VerticalLine {
-	text-align: center;
+    text-align: center;
 }
 
 
 
 .PLine {
-	width: 4px;
-	height: 240px;
-	    background: linear-gradient(0deg, #b78888, red)!important;
+    width: 4px;
+    height: 240px;
+    background: linear-gradient(0deg, #b78888, red)!important;
 }
 
 
 .ProjectionSlabHeight_Selected {
-	background: #025d3c!important;
+    background: #025d3c!important;
     color: white!important;
-        height: 50px;
-        text-align: left;
+    height: 50px;
+    text-align: left;
 }
 
 .triangleShape_Selected {
-	border-right: 15px solid #025d3c!important;
+    border-right: 15px solid #025d3c!important;
 }
 
 @media (max-width: 1205px) {
-	.PSlabLabel {
-	font-size:14px;
-	}
+    .PSlabLabel {
+        font-size:14px;
+    }
 }
 
 @media (max-width: 600px) and (min-width: 320px) {
-	.ContainerPSlab-tcmUI {
-	width: 100%;
-}
+    .ContainerPSlab-tcmUI {
+        width: 100%;
+    }
 
-.Res100MP {
-	width: 100%!important;
-}
+    .Res100MP {
+        width: 100%!important;
+    }
 
-.MarTopRes {
-	margin-top: 20px;
-}
+    .MarTopRes {
+        margin-top: 20px;
+    }
 
 }
 
 @media (max-width: 735px) {
-		.ContainerPSlab-tcmUI {
-	margin-top: 25px!important;
-}
+    .ContainerPSlab-tcmUI {
+        margin-top: 25px!important;
+    }
 }
 
 @media (max-width: 1015px) and (min-width: 320px) {
-	.Container30-tcmUI {
-    width: 100%;
+    .Container30-tcmUI {
+        width: 100%;
+    }
+
+    .EnableProjectionSlab {
+        Display: none!important;
+    }
+    .Container70-tcmUI {
+        width: 100%;
+    }
+
+    .EnableDrodownProjection {
+        Display: block;
+    }
+}
+
+/*Menu*/
+@media (min-width: 961px) {
+    .MobileModeOnly {
+        display: none;}
+}
+
+/* @media (max-width: 860px) and (min-width: 640px) {
+	.submenuCustom {
+	   margin-right: 20%;
 	}
-	
-	.EnableProjectionSlab {
-	Display: none!important;
-	}
-	.Container70-tcmUI {
-	width: 100%;
-	}
-	
-	.EnableDrodownProjection {
-	Display: block;
-	}
+} */
+
+
+@media (max-width: 640px) {
+    .submenuCustom {
+        width: 100%!important;
+        float: right;
+        font-size: 13px!important;
+        text-align: right;
+        padding-top: 0px!important;
+        padding-bottom: 5px;
+    }
 }
 /**/
 
 /*Prakash*/
+
+.submenuCustom {
+    width: 40%;
+    float: right;
+    text-align: right;
+    font-size: 14px;
+    padding-top: 20px;
+    margin-right: 5%;
+}
+
 .GraphPanel > .ui-panel-content {
-padding: 0!important;
-	}
+    padding: 0!important;
+}
 
 .ui-tooltip {
     border:0!important;
@@ -688,15 +724,15 @@ padding: 0!important;
 }
 
 .ui-panel > .ui-panel-content, .ui-panel {
-     padding:1px!important;
- }
+    padding:1px!important;
+}
 
 .ui-state-error {
     height: 97%!important;
 }
 
 .perStripesHelp, .perStripesHelp > span {
-background: transparent!important;
+    background: transparent!important;
     border: 0!important;
     width: 0!important;
     height: 0!important;
@@ -705,7 +741,7 @@ background: transparent!important;
 }
 
 .perStripesHelp > span {
-	display: none!important;
+    display: none!important;
 }
 
 .RiskQuestionBlock > table > tbody> tr > td >label {
@@ -713,20 +749,20 @@ background: transparent!important;
 }
 
 .sigupLabel {
-font-size: 14px;
+    font-size: 14px;
     font-weight: bold!important;
     margin: 0 10px;
 }
 
 .selectBG > label {
-	background: transparent;
+    background: transparent;
 }
 .selectBG {
-	width: 100%!important;
+    width: 100%!important;
 }
 
 .ui-overlaypanel-content {
-	    font-size: 13px;
+    font-size: 13px;
     padding: 10px!important;
 }
 
@@ -735,46 +771,46 @@ input {
 }
 
 .ui-selectonemenu, input {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .sigupRegRootHelp0, .sigupRegRootHelp0 > span {
-	background: transparent!important;
-	border: 0!important;
-	width: 0!important;
-	margin:0!important;
-	    margin-top: -22px!important;
+    background: transparent!important;
+    border: 0!important;
+    width: 0!important;
+    margin:0!important;
+    margin-top: -22px!important;
 }
 
 .tdPanelInternal > div {
-	padding:0!important;
+    padding:0!important;
 }
 
 .tdPanelInternal {
-border: 0px!important; 
-background: transparent!important; 
-margin-top: -10px!important; 
-padding: 0!important;
+    border: 0px!important;
+    background: transparent!important;
+    margin-top: -10px!important;
+    padding: 0!important;
 }
 
 .funding > span{
-	font-size: 18px!important;
+    font-size: 18px!important;
 }
 
 .fundingRecurring > input {
-	width: 95%;
+    width: 95%;
     border-radius: 3px!important;
     text-align: left;
 }
 
 .fundingRecurring {
-margin: 0;
-border-bottom: 0px!important;
+    margin: 0;
+    border-bottom: 0px!important;
 }
 
 
 .FullWidthCustomWindow {
-width: 97%!important;
+    width: 97%!important;
     padding: 1% 1.5%;
     margin: 8px auto!important;
     overflow: hidden;
@@ -786,10 +822,10 @@ width: 97%!important;
     -webkit-box-shadow: 0px 1px 0px 0px rgba(159,172,183,0.7);
     -moz-box-shadow: 0px 1px 0px 0px rgba(159,172,183,0.7);
     box-shadow: 0px 1px 0px 0px rgba(159,172,183,0.7);
-	}
+}
 
 .CustomWidthFA3 {
-	width: 50%;
+    width: 50%;
 }
 
 .formPage .ui-tabs .ui-tabs-panel {
@@ -797,8 +833,8 @@ width: 97%!important;
 }
 
 .formpageDropdown.ui-state-hover, .formpageDropdown.ui-state-focus,
-.formPage .ui-inputfield, .formpageDropdown, 
-.formPage .ui-inputfield.ui-state-hover, 
+.formPage .ui-inputfield, .formpageDropdown,
+.formPage .ui-inputfield.ui-state-hover,
 .formPage .ui-inputfield.ui-state-focus {
     border: solid 1px #f2f2f2!important;
     background-color: transparent;
@@ -808,49 +844,49 @@ width: 97%!important;
 
 
 .ui-selectonemenu label.ui-selectonemenu-label {
-	border-color:transparent!important;
+    border-color:transparent!important;
 }
 
 .signupFooter {
-bottom: 0!important;
+    bottom: 0!important;
     position: absolute;
     left: 0;
     right: 0;
 }
 
 .FundCenterAlignBlock {
-	margin: 0 auto!important;
-	float: none!important;
+    margin: 0 auto!important;
+    float: none!important;
 }
 
 .FundTitle {
-font-weight: bold;
+    font-weight: bold;
     padding: 5px 0;
     border-bottom: 2px solid grey;
 }
 .closeAddBeneficiary  {
-	margin-bottom: -20px;
-	}
+    margin-bottom: -20px;
+}
 
 .AddBeneficiaryButton > .ui-icon {
-	background-image: url("/javax.faces.resource/images/ui-icons_ffffff_256x240.png.xhtml?ln=primefaces-spark")!important;
+    background-image: url("/javax.faces.resource/images/ui-icons_ffffff_256x240.png.xhtml?ln=primefaces-spark")!important;
 }
 
 .Container32 {
-	width: 32%;
-	float: left;
+    width: 32%;
+    float: left;
 }
 
 .Wid85 {
-	width: 85%;
+    width: 85%;
 }
 
 .BeneficiaryButton {
-	text-align: center!important;
+    text-align: center!important;
 }
 
 .BeneficiaryButton > button {
-	width: 200px!important;
+    width: 200px!important;
 }
 
 .CustomWidthAccountypePanel {
@@ -858,7 +894,7 @@ font-weight: bold;
 }
 
 img.atCheckMarkImg {
-padding: 6px 0;
+    padding: 6px 0;
 }
 
 .dropdownInputFullWidth {
@@ -2157,19 +2193,19 @@ h3 {
 }
 
 @media (min-width: 320px) and (max-width: 360px) {
-	.SignupBlock0 > div {
-    margin-top:10px!important;
+    .SignupBlock0 > div {
+        margin-top:10px!important;
     }
-    
+
     .PwdReset0 {
-	margin-top:10px!important;
-	}
+        margin-top:10px!important;
+    }
 }
 @media (min-width:360px) and (max-width: 480px) {
-	.PwdReset0 {
-	margin-top:10px!important;
-	}
-	
+    .PwdReset0 {
+        margin-top:10px!important;
+    }
+
     .mobileFullWidth {
         width: 100%;
         margin: 5px 0;
@@ -2231,13 +2267,13 @@ h3 {
     .ui-panel .ui-panel-content {
         margin-top: -15px;
     }
-    
+
     .SignupBlock0 > div {
-    margin-top:10px!important;
+        margin-top:10px!important;
     }
-    
+
     .SignupBlock2 > div {
-    margin-top:0px!important;
+        margin-top:0px!important;
     }
 
     .ui-messages-error, .ui-message-error {
@@ -2390,11 +2426,11 @@ h3 {
     .ui-panel .ui-panel-content {
         margin-top: -15px;
     }
-    
+
     .SignupBlock2 > div {
-    margin-top:0px!important;
+        margin-top:0px!important;
     }
-    
+
 
     .ui-messages-error, .ui-message-error {
         font-size: 12px;
@@ -2530,11 +2566,11 @@ h3 {
     .ui-panel .ui-panel-content {
         margin-top: -15px;
     }
-    
+
     .SignupBlock2 > div {
-    margin-top:0px!important;
+        margin-top:0px!important;
     }
-    
+
 
     .ui-messages-error, .ui-message-error {
         font-size: 12px;
