Committing TCM Project

--- a/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -25,7 +25,7 @@
                         <a href="#{uiLayout.defaultHome}" class="Animated05"><i class="fa fa-home"></i> Dashboard</a>
                     </li>
 
-                    <li>
+                    <li style="float:left!important;">
                         <ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
                             <a class="Animated05 CursPointer Marbottom"><i class="fa fa-cog"></i> Settings</a>
                             <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
@@ -41,7 +41,7 @@
                     </li>
 
 
-                    <li class="fa fa-ellipsis-v menu-separator"></li>
+                    <li class="fa fa-ellipsis-v menu-separator" style="float:left!important;"></li>
                     <li>
                         <a href="j_spring_security_logout" class="Animated05"><i class="fa fa-sign-out"></i> Logout</a>
                     </li>
