Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -13,7 +13,7 @@
                                  actionListener="#{uiLayout.defaultHome}"/>
             </f:facet>
 
-            <p:menuitem value="New Account" icon="fa fa-plus-square"
+            <p:menuitem value="New Account"
                         actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}"/>
 
         </ps:menu>
