--- a/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -19,7 +19,8 @@
 
                 <ul id="layout-topbar-menu">
                     <li class="MobileModeOnly">
-                        <a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>
+                        <!--<a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>-->
+                        <a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05">New Account</a>
                     </li>
                     <li class="MobileModeOnly">
                         <a href="#{uiLayout.defaultHome}" class="Animated05"><i class="fa fa-home"></i> Dashboard</a>
