--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -239,6 +239,11 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 /**/
 /*Prakash*/
 
+.autoComplteteField > input {
+	font-size: 14px!important;
+	width:100%!important;
+}
+
 .ui-messages-error-icon {
 	margin-top: -4px!important;
 }
