--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -692,7 +692,9 @@ img.riskImage:hover {
 /**/
 
 /*Prakash*/
-
+.ui-panel-content {
+    width: 100%!important;
+}
 .submenuCustom {
     width: 40%;
     float: right;
