--- a/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -19,8 +19,10 @@
 
                 <ul id="layout-topbar-menu">
                     <li class="MobileModeOnly">
+                        <ui:fragment rendered="#{webutil.hasrole()!='advisor'}">
                         <!--<a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>-->
                         <a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05">New Account</a>
+                        </ui:fragment>
                     </li>
                     <li class="MobileModeOnly">
                         <a href="#{uiLayout.defaultHome}" class="Animated05"><i class="fa fa-home"></i> Dashboard</a>
