--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -198,6 +198,145 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 {
     width: 80px !important;
 }
+
+/*8 top tabs*/
+@media (min-width: 1321px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+	width: 689px;
+	}
+
+} @media (max-width: 1320px) and (min-width: 1000px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 689px;
+	}
+
+} @media (max-width: 999px) and (min-width: 961px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 729px;
+	}
+
+} @media (max-width: 960px) and (min-width: 771px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 569px;
+	}
+
+} @media (max-width: 770px) and (min-width: 730px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 528px;
+	}
+
+} @media (max-width: 729px) and (min-width: 641px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 408px;
+	}
+
+} @media (max-width: 640px) and (min-width: 561px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 328px;
+	}
+
+} @media (max-width: 481px) and (min-width: 361px)
+{ .tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 226px;
+	}
+
+} @media (max-width: 361px) and (min-width: 320px) {
+	.tab_main > .portfolioCreationSteps8Panel {
+		margin: 0 auto;
+		width: 193px;
+	}
+}
+
+@media (min-width:1000px) {
+	.portfolioCreationSteps8Panel > ul > li > a {
+		width: 65px!important;
+	}
+}
+
+@media (max-width:999px) and (min-width:961px) {
+	.portfolioCreationSteps8Panel > ul > li > a {
+		width: 70px!important;
+	}
+}
+
+@media (max-width: 960px) and (min-width: 771px) {
+	.portfolioCreationSteps8Panel > ul > li > a {
+		width: 50px!important;
+	}
+}
+
+@media (max-width: 770px) and (min-width: 730px) {
+	.portfolioCreationSteps8Panel > ul > li > a {
+		width: 45px!important;
+	}
+}
+
+
+@media (max-width: 729px) and (min-width: 641px) {
+	.portfolioCreationSteps8Panel > ul > li > a {
+		width: 30px!important;
+	}
+}
+
+@media (max-width: 640px) and (min-width: 561px) {
+	.portfolioCreationSteps8Panel > ul > li > a {
+		width: 20px!important;
+	}
+}
+
+@media (max-width: 560px) {
+	.portfolioCreationSteps8Panel > ul > li > a {
+		width: 7px!important;
+	}
+}
+
+.portfolioCreationSteps8Panel > ul > li > a > span:nth-child(2) {
+	width: 45px!important;
+	margin: 0 2px;
+}
+/**/
+.customLi {
+    list-style: initial!important;
+    text-align: left;
+    margin: 7px 0;
+}
+/*s_dashboard*/
+@media (max-width: 500px){
+    .s_dashboard {
+        width: 100%;
+        float: none;
+    }
+
+    .s_dashboardIcon {
+        text-align: left;
+    }
+
+    .s_dashboardLabel {
+        text-align: right;
+        padding: 10px 0;
+    }
+}
+.s_dashboard {
+	width: 25%;
+	float: left;
+}
+
+.s_dashboardIcon {
+	text-align: center;
+}
+
+.s_dashboardLabel {
+	text-align: left;
+    padding: 10px 0;
+}
 /*Prakash - Advisor*/
 @media (max-width: 550px) {
 	.PenelFilter > .ui-selectonebutton > .ui-button > .ui-button-text {
