--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -322,18 +322,18 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 	
 	.s_dashboardIcon {
     text-align: center;
-    width: 100%;
+    width: 100%!important;
 }
 .DisplaynoneMobile {
     display: none;
     }
 }
 /**/
-@media (min-width: 400px) and (max-width: 630px){
+@media (min-width: 401px) and (max-width: 630px){
     .s_dashboard {
         width: 100%!important;
             margin: 5px 0px;
-        float: none!important;
+        //float: none%!important;
     }
 
     .s_dashboardIcon {
