--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -408,11 +408,11 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 }
 
 .dashboard_customStyle {
-	box-shadow: 0 4px 8px -1px #d8d6d6;
+	box-shadow: 0px 0px 12px 1px #b9b7b7;
 }
 
 .dashboard_customStyle > td {
-	height: 30px;
+	height: 40px;
 }
 
 .s_dashbaordPanel {
@@ -437,6 +437,10 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 	padding: 10px 0px;
 	color: white;
 	font-weight: bold;
+}
+
+.effectShiftMargin {
+	margin-top: 10px;
 }
 
 /*Prakash - Advisor*/
