--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -1130,6 +1130,10 @@ img.riskImage:hover {
     }
 }
 
+.dashExtraInfoTable > tbody > tr > td  {
+    padding: 5px 0px;
+}
+
 .ContentTitleDash {
     font-size: 12px;
 }
